package es.uclm.bckroom.business.domain;

public enum PoliticaCancelacion {
	NO_REEMBOLSABLE,
	REEMBOLSABLE,
	REEMBOLSABLE_50_PER
}
