package es.uclm.bckroom.business.domain;

public enum TipoCalle {
	CALLE, 
	AVENIDA, 
	PLAZA, 
	RONDA, 
	PASEO, 
	TRAVESIA, 
	CALLEJON, 
	URBANIZACION,
	GLORIETA
}
