---
config:
  layout: dagre
---
classDiagram
direction BT
    class Usuario {
	    -Long id
	    -String username
	    -String passwd
	    -String nombre
	    -String primerApellido
	    -String segundoApellido
	    -DireccionUsuario direccion
	    +Usuario()
	    +Usuario(usuario: Usuario)
	    +Usuario(username: String, passwd: String, nombre: String, primerApellido: String, segundoApellido: String, direccion: DireccionUsuario)
	    +getters*()
	    +setter*()
	    +checkPasswd(String passwd) : boolean
    }

    class Inquilino {
	    -ListaDeseos listaDeseos
	    +Inquilino()
	    +Inquilino(usuario: Usuario)
	    +Inquilino(username: String, passwd: String, nombre: String, primerApellido: String, segundoApellido: String, direccion: DireccionUsuario, listaDeseos: ListaDeseos)
	    +getters*()
	    +setters*()
    }

    class Propietario {
	    -List:Inmueble inmuebles
	    +Propietario()
	    +Propietario(usuario: Usuario)
	    +Propietario(username: String, passwd: String, nombre: String, primerApellido: String, segundoApellido: String, direccion: DireccionUsuario, inmuebles: List:Inmueble)
	    +getters*()
	    +setters*()
    }

    class Inmueble {
	    -Long id
	    -Propietario propietario
	    -DireccionInmueble direccion
	    -Double precioNoche
		-disponibilidades: List
		-comodidades: Set
	    +Inmueble()
	    +Inmueble(propietario: Propietario, direccion: DireccionInmueble, precioNoche: Double)
	    +getters*()
	    +setters*()
		+addDisponibilidad(disponibilidad: Disponibilidad): void
		+delDisponibilidad(disponibilidad: Disponibilidad): void
    }

    class ListaDeseos {
	    -Long id
	    -Inquilino inquilino
	    -List:Inmueble inmuebles
	    +ListaDeseos()
	    +ListaDeseos(inquilino: Inquilino, inmuebles: List:Inmueble)
	    +addInmueble(inmueble: Inmueble) : void
	    +deleteInmueble(inmueble: Inmueble) : void
	    +getters*()
	    +setters*()
    }

    class DireccionUsuario {
	    -TipoCalle tipoCalle
	    -String calle
	    -String ciudad
	    -String estadoProvincia
	    -String codigoPostal
	    -String pais
	    +DireccionUsuario()
	    +DireccionUsuario(tipoCalle: TipoCalle, calle: String, ciudad: String, estadoProvincia: String, codigoPostal: String, pais: String)
	    +getters*()
	    +setters*()
    }

    class DireccionInmueble {
	    -DireccionUsuario base
	    -String numero
	    -String piso
	    -String puerta
	    +DireccionInmueble()
	    +DireccionInmueble(base: DireccionUsuario, numero: String, piso: String, puerta: String)
	    +getters*()
	    +setters*()
    }

    class TipoCalle {
	    <<enumeration>>
	    CALLE
        AVENIDA 
        PLAZA
        RONDA
        PASEO
        TRAVESIA
        CALLEJON
        URBANIZACION
        GLORIETA
    }
    
	class Disponibilidad {
		-id: Long
		-fechaInicio: Date
		-fechaFin: Date
		-precio: double
		-politicaCancelacion: PoliticaCancelacion
		-inmueble: Inmueble
		+Disponibilidad()
		+Disponibilidad(fechaInicio: Date, fechaFin: Date, precio: double, inmueble: Inmueble)
		+getters*()
		+setters*()
		+fechasDentroDeRango(fechaInicio: Date, fechaFin: Date): boolean
	}
	class PoliticaCancelacion {
		<<enumeration>>
		NO_REEMBOLSABLE
		REEMBOLSABLE
		REEMBOLSABLE_50_PER
	}
	class Comodidad {
		id: Long
		nombre: String
		inmuebles: Set
		getId(): Long
		setId(Long id): void
		getNombre(): String
		setNombre(String nombre): void
	}
    Inquilino --|> Usuario
    Propietario --|> Usuario
    Propietario "1" *-- "1,*" Inmueble : inmuebles
    Inquilino "1" --> "1" ListaDeseos : listaDeseos
    ListaDeseos "1" o--> "0,*" Inmueble : inmuebles
    Usuario "1" *-- "1" DireccionUsuario : direccion
    Inmueble "1" *-- "1" DireccionInmueble : direccion
    DireccionInmueble "1" --> "1" DireccionUsuario : direccionBase
    DireccionUsuario "1" --> "1" TipoCalle : tipoCalle
	Disponibilidad "0,*" --* "1" Inmueble: disponibilidad
	Disponibilidad "" --> "1" PoliticaCancelacion: politicaCancelacion
	Inmueble "1" *-- "0,*" Comodidad: comodidades